<resources>
    <string name="app_name">Ghi chú</string>
    <string name="register_underline"><u>Đăng kí</u></string>
    <string name="my_note">Ghi chú của tôi</string>
    <string name="shared_note">Được chia sẻ</string>
    <string name="find_note">Tìm kiếm</string>
    <string name="email">Địa chỉ email</string>
    <string name="user_name">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="confirmPassword">Nhập lại mật khẩu</string>
    <string name="register">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="language">Ngôn ngữ</string>
    <string name="language_vn">Tiếng Việt</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="language_en">Tiếng anh</string>
    <string name="notification">Thông báo</string>
    <string name="theme">Chủ đề</string>
    <string name="light_theme">Chế độ sáng</string>
    <string name="dark_theme">Chế độ tối</string>
    <string name="search_in_note">Tìm trong ghi chú</string>
    <string name="owner">Chủ sở hữu</string>
    <string name="read_only">Người xem</string>
    <string name="edit">Người chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="heading">Tiêu đề</string>
    <string name='content'>Nội dung</string>
    <string name='format'>Định dạng</string>
    <string name="delete_column">Xóa cột</string>
    <string name="delete_row">Xóa dòng</string>
    <string name="delete_table">Xóa bảng</string>
    <string name="add_row">Thêm hàng</string>
    <string name="add_column">Thêm cột</string>
    <string name="share">Chia sẻ</string>
    <string name="account">Tài khoản</string>
    <string name="on">Bật</string>
    <string name="off">Tắt</string>
    <string name="logout">Đăng xuất</string>
    <string name="add_member">Thêm thành viên</string>
    <string name="permission">Những người có quyền truy cập</string>
    <string name="accept_delete_note">Xác nhận xóa ghi chú</string>
    <string name="no">Không</string>
    <string name="loading">Đang tải...</string>
    <string name="shared">đã chia sẻ</string>
    <string name="no_find">Không tìm thấy</string>
    <string name="finish">Xong</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="forgot_password"><u>Quên mật khẩu</u></string>
    <string name="forgot_password_not_underline">Quên mật khẩu</string>
    <string name="add">Thêm</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="system">Hệ thống</string>
    <string name="accept">Xác nhận</string>
    <string name="inputCode">Nhập mã xác thực</string>
</resources>
