<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChangePassword"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/material_icons"
            android:text="\ue5e0"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish"
            android:textSize="14sp"
            android:gravity="end"
            android:id="@+id/btnFinish"
            android:textColor="?attr/colorPrimary"/>
    </LinearLayout>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/user"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:id="@+id/tvNameUser"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/only_border"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/current_password"
            android:id="@+id/current_password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/only_border"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/new_password"
            android:id="@+id/new_password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/only_border"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/confirm_new_password"
            android:id="@+id/confirm_new_password"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:background="@drawable/border_background_yellow"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/btnFinish2"/>

    </LinearLayout>

</LinearLayout>