<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#1900000B"
    android:id="@+id/wrap"
    >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/border_background_white"
            android:layout_centerInParent="true"
            android:id="@+id/popup"
            >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/accept_delete_note"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/delete"
                            android:background="@drawable/border_background_style_second"
                            android:layout_weight="1"
                            android:id="@+id/btnAccept"
                            />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/no"
                            android:background="@drawable/border_background"
                            android:layout_weight="1"
                            android:layout_marginStart="10dp"
                            android:id="@+id/btnBack"/>

                </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

