<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/material_icons"
        android:text="\ue5cd"
        android:textColor="#FFD95F"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="100dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_not_underline"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:labelFor="@+id/edEmail"
            android:layout_marginBottom="5dp"
            tools:ignore="MissingConstraints"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/only_border"
            android:id="@id/edEmail"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,MissingConstraints"
            android:textColor="?attr/colorPrimary"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:background="@drawable/border_background_yellow"
            android:id="@+id/btnAccept"/>
    </LinearLayout>
</RelativeLayout>